Fixed layout bug caused by using percentage instead of pixels.

--- a/static/madscientist/less/splash.less
+++ b/static/madscientist/less/splash.less
@@ -5,7 +5,7 @@
   
   min-height: 500px;
   
-  background: url('../images/dizzygirl_alone.png') 75% 30% no-repeat;
+  background: url('../images/dizzygirl_alone.png') 75% 60px no-repeat;
  
   .form-container {
     float: left;
